--- a/examples/cpp/conversions/CMakeLists.txt
+++ b/examples/cpp/conversions/CMakeLists.txt
@@ -8,3 +8,8 @@ add_executable(occupancy_to_ply occupancy_to_ply.cc)
 set_wavemap_target_properties(occupancy_to_ply)
 target_link_libraries(occupancy_to_ply PUBLIC
     wavemap::wavemap_core wavemap::wavemap_io)
+
+add_executable(occupancy_to_ply occupancy_to_surface_ply.cc)
+set_wavemap_target_properties(occupancy_to_surface_ply)
+target_link_libraries(occupancy_to_surface_ply PUBLIC
+    wavemap::wavemap_core wavemap::wavemap_io)
